<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/fromLabel"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/from_city"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_from"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="240dp"
        android:layout_height="64dp"
        android:layout_alignBaseline="@id/fromLabel"
        android:layout_toEndOf="@id/fromLabel"
        android:gravity="left"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent">

        <AutoCompleteTextView
            android:id="@+id/auto_complete_from_city_tv"
            android:layout_width="230dp"
            android:layout_height="55dp"
            android:hint="@string/from_city" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/toLabel"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/fromLabel"
        android:layout_marginTop="64dp"
        android:text="@string/to_city"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.231"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fromLabel" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_to"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="240dp"
        android:layout_height="64dp"
        android:layout_alignBaseline="@id/toLabel"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@id/toLabel"
        android:gravity="left"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_from">

        <AutoCompleteTextView
            android:id="@+id/auto_complete_to_city_tv"
            android:layout_width="230dp"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:hint="@string/to_city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_from" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/departureDateLabel"
        android:layout_width="71dp"
        android:layout_height="34dp"
        android:layout_below="@id/toLabel"
        android:layout_marginTop="48dp"
        android:text="@string/departure_date"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.205"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toLabel" />

    <EditText
        android:id="@+id/departureDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/departureDateLabel"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@id/departureDateLabel"
        android:autofillHints="@string/departure_date"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/departure_date"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_to" />

    <EditText
        android:id="@+id/arrivingDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/departureDate"
        android:layout_alignBaseline="@id/arrivingDateLabel"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@id/arrivingDateLabel"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/arriving_date"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/departureDate" />

    <TextView
        android:id="@+id/arrivingDateLabel"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/departureDateLabel"
        android:layout_marginStart="16dp"
        android:layout_marginTop="38dp"
        android:text="@string/arriving_date"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/departureDateLabel" />

    <TextView
        android:id="@+id/babiesLabel"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/childrenLabel"
        android:layout_marginTop="48dp"
        android:text="@string/babies"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.231"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/childrenLabel" />

    <EditText
        android:id="@+id/babiesEtNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/babiesLabel"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@id/babiesLabel"
        android:ems="10"
        android:hint="@string/babies"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/childrenEtNumber" />

    <TextView
        android:id="@+id/childrenLabel"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/adultslabel"
        android:layout_marginTop="48dp"
        android:text="@string/children"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.231"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adultslabel" />

    <EditText
        android:id="@+id/childrenEtNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/childrenLabel"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@id/childrenLabel"
        android:ems="10"
        android:hint="@string/children"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

    <TextView
        android:id="@+id/adultslabel"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/arrivingDateLabel"
        android:layout_marginTop="44dp"
        android:text="@string/adults"
        app:layout_constraintEnd_toStartOf="@+id/editTextNumber"
        app:layout_constraintHorizontal_bias="0.231"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arrivingDateLabel" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/adultslabel"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="4dp"
        android:layout_toEndOf="@id/adultslabel"
        android:ems="10"
        android:hint="@string/adults"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/arrivingDate" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="532dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="149dp"
        app:layout_constraintWidth_percent="0.5" />


</androidx.constraintlayout.widget.ConstraintLayout>